remove close button

--- a/assets/raffle.html
+++ b/assets/raffle.html
@@ -207,7 +207,7 @@
       position: fixed;
       top: 20px;
       right: 20px;
-      background-color: #ff4081;
+      background-color: #45a049;
       color: white;
       border: none;
       padding: 0.75rem;
@@ -223,7 +223,7 @@
     }
 
     .customize-toggle:hover {
-      background-color: #e91e63;
+      background-color: #45a049;
     }
 
     .customization-section {
@@ -338,7 +338,7 @@
 
 <!-- Customization Panel -->
 <div class="customization-panel" id="customizationPanel">
-  <button class="close-panel" onclick="toggleCustomizationPanel()">×</button>
+  <!--<button class="close-panel" onclick="toggleCustomizationPanel()">×</button>-->
 
   <div class="customization-section">
     <h3>Title Customization</h3>
