--- a/assets/raffle.html
+++ b/assets/raffle.html
@@ -362,7 +362,7 @@
   <div class="customization-section">
     <h3>CSS Customization</h3>
     <div class="form-group">
-      <label for="cssInput">Custom CSS (will be added to existing styles, here's <a href="./css-samle.css" target="_blank">an example</a>):</label>
+      <label for="cssInput">Custom CSS (will be added to existing styles, here's <a href="./css-sample.css" target="_blank">an example</a>):</label>
       <textarea id="cssInput" placeholder="Enter your custom CSS here...
 Example:
 body { background: linear-gradient(45deg, #1a1a2e, #16213e); }
