--- a/index.html
+++ b/index.html
@@ -73,23 +73,6 @@
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
-                        <li class="mb-2">
-                            <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/308208478/">IntelliJ as a game engine + 1 more</a>
-                            </div>
-                            <span>
-                                Oniryx, Gembloux - Thu 19 June 2025
-                                    <ul class="list-unstyled">
-                                            <li class="ms-4">
-                                                IntelliJ as a game engine
-                                                    <span class="small">by Alexander Chatzizacharias</span>
-                                            </li>
-                                            <li class="ms-4">
-                                                Could be you!
-                                            </li>
-                                    </ul>
-                            </span>
-                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
@@ -103,14 +86,14 @@
             </div>
             <h2>How to</h2>
             <ul class="list-unstyled mb-4">
-                <li>Want to speak at the meetup? Send us a message either on Meetup.com, via DM on Twitter... or talk to us directly at an event.</li>
-                <li>Want to host the BeJUG at your company? Read the partnership guidelines and get in touch!</li>
+                <li>Want to speak at the meetup? Let us know in a <a href="https://github.com/BeJUG/bejug.github.io/issues" target="_blank">GitHub ticket</a> or talk to us directly at an event.</li>
+                <li>Want to host the BeJUG at your company? Read the <a href="/partnership-guidelines.html">partnership guidelines</a> and get in touch!</li>
             </ul>
             <div class="mb-4">
-                <a class="m-1" style="color: #55acee" href="https://twitter.com/BeJUG" role="button"><i class="fa-brands fa-twitter"></i></a>
-                <a style="color: #208bfe" href="https://bsky.app/profile/bejug.bsky.social" role="button"><i class="fa-brands fa-bluesky"></i></a>
-                <a class="m-1" style="color: #0077b5" href="https://www.linkedin.com/groups/155664/" role="button"><i class="fa-brands fa-linkedin"></i></a>
-                <a class="m-1" style="color: #333" href="https://github.com/bejug" role="button"><i class="fa-brands fa-github"></i></a>
+                <a class="m-1" style="color: #208bfe" href="https://bsky.app/profile/bejug.bsky.social" target="_blank" role="button"><i class="fa-brands fa-bluesky"></i></a>
+                <a class="m-1" style="color: #6364ff" href="https://foojay.social/@BeJUG" target="_blank" role="button"><i class="fa-brands fa-mastodon"></i></a>
+                <a class="m-1" style="color: #0077b5" href="https://www.linkedin.com/groups/155664/" target="_blank" role="button"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="m-1" style="color: #333" href="https://github.com/bejug" target="_blank" role="button"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </div>
